# ai-grand-prix

./: .gitignore  README.md  proposed_architecture.md  pyproject.toml  technical_specs.md
examples/: controller.py  requirements.txt
skydreamer/: __init__.py  config.py  skydreamer_notes.md  temporary_notes.md
skydreamer/data/: __init__.py  replay.py  schema.py  synthetic.py
skydreamer/models/: __init__.py  actor_critic.py  export.py  heads.py  policy.py  rssm.py  segmentation.py
skydreamer/smoke/: __init__.py  run.py
skydreamer/train/: __init__.py  checkpoint.py  losses.py  smoke.py  trainer.py
src/app/: replay_log.py  run_vq1.py
src/config/: settings.py
src/control/: __init__.py  command_smoother.py  commands.py  safety.py  visual_servo.py
src/perception/: __init__.py  calibration.py  compat.py  detector.py  evaluate_replay.py  gate_detector.py  generate_labels.py  geometry.py  guidance_detector.py  image_preprocess.py  main.py  observations.py  postprocess.py  projection.py  record_dataset.py  review_labels.py  runner.py  storage.py  sync.py  telemetry.py  tracking.py  train_yolo.py  types.py  vision.py  visualization.py
src/planning/: __init__.py  behavior.py  search.py  speed_policy.py
src/run_logging/: __init__.py  run_logger.py  schemas.py
src/sensors/: __init__.py  calibration.py  frame_source.py  telemetry_source.py
src/sim/: __init__.py  api_client.py  clock.py  types.py
src/state/: __init__.py  estimator.py  (+2 more)
tests/: test_perception_postprocess.py  test_perception_projection.py  test_perception_sync.py  test_perception_telemetry.py
