[project]
name = "ai-grand-prix"
version = "0.1.0"
description = "Reliability-first autonomy stack for the AI Grand Prix simulator."
requires-python = ">=3.14,<3.15"
dependencies = [
    "numpy",
]

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.pyright]
pythonVersion = "3.14"
extraPaths = ["src"]
